[package]
name = "reduct-rs"

version = "1.9.5"
authors =["Alexey Timin <atimin@reduct.store>"]
edition = "2021"
rust-version = "1.75.0"


license = "MPL-2.0"
description = "ReductStore Client SDK for Rust."
repository = "https://github.com/reductstore/reduct-rs"
readme = "README.md"
keywords = ["database", "time-series", "client", "sdk", "reductstore"]
categories = ["database"]


[lib]
crate-type = ["lib"]

[dependencies]
reduct-base = "1.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
http = "1.0.0"
rustls = "0.23"
chrono = { version = "0.4.11", features = ["serde"] }
bytes = "1.4.0"
futures = "0.3.17"
futures-util = "0.3.28"
async-stream = "0.3.5"
async-channel = "2.1.1"
tokio = { version = "1.0", default-features = false, features = ["macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "rt-multi-thread"] }
rstest = "0.19.0"
test-with = { version = "0.12.6", default-features = false }
