[package]
name = "reduct-rs"

version = "1.17.2"
authors = ["Alexey Timin <atimin@reduct.store>"]
edition = "2021"
rust-version = "1.89.0"


license = "MPL-2.0"
description = "ReductStore Client SDK for Rust."
repository = "https://github.com/reductstore/reduct-rs"
readme = "README.md"
keywords = ["database", "time-series", "client", "sdk", "reductstore"]
categories = ["database"]

[features]
default = []
test-api-117 = []   # Test API 1.16


[lib]
crate-type = ["lib"]

[dependencies]
reduct-base = "1.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "cookies"] }
http = "1.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
bytes = "1.4.0"
futures = "0.3.17"
futures-util = "0.3.28"
async-stream = "0.3.5"
async-channel = "2.1.1"
tokio = { version = "1.0", default-features = false, features = ["macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "rt-multi-thread"] }
rstest = "0.26.1"
test-with = { version = "0.15.2", default-features = false }
